--- a/css/landing.css
+++ b/css/landing.css
@@ -41,7 +41,7 @@ button:hover {
   color: black;
   background-color: #1F64BF;
   position: absolute;
-  top: 43%;
+  top: 350px;
   left: 44%;
   border-radius: 25px;
 }
